overflow fix?

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* You can add custom CSS and extend Boostrap styles in this file. Remember, Bootstrap is just CSS at the end of the day! */
 body{
     font-family: 'Archivo Narrow', sans-serif;
+    overflow: hidden;
 }
 /* Nav */
 .blue-gradient{
